--- a/ExampleParent/blog/templates/detail.html
+++ b/ExampleParent/blog/templates/detail.html
@@ -1,3 +1,8 @@
 <h1>{{ blog.title }}</h1>
 <p>날짜 : {{ blog.pub_date }}</p>
 <p> 본문 : {{ blog.body }}</p>
+<br>
+<br>
+<a href="{% url 'edit' blog.id %}">수정하기</a>
+<a href="{% url 'delete' blog.id %}">삭제하기</a>
+<a href="{% url 'home' %}">홈으로 돌아가기</a>
