--- a/ExampleParent/blog/templates/home.html
+++ b/ExampleParent/blog/templates/home.html
@@ -1,6 +1,22 @@
-{% for blog in blogs.all %}
-<h1>{{ blog.title }}</h1>
-<p>날짜 : {{ blog.pub_date }}</p>
-<p>본문 : {{ blog.summary}}<a href="{% url 'detail' blog.id %}">...more</a></p>
-<br><br>
-{% endfor %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="blog/css/home.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Blog Project</h1>
+    <a href="{% url 'new' %}">새로운 글 생성하기</a>
+
+    {% for blog in blogs.all %}
+        <div class="blog_post">
+            <h1>{{ blog.title }}</h1>
+            <p>날짜 : {{ blog.pub_date }}</p>
+            <p>본문 : {{ blog.summary}}<a href="{% url 'detail' blog.id %}">...more</a></p>
+        </div>
+    {% endfor %}
+</body>
+</html>
